--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,27 +7,27 @@
     <div  class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="#">Home</a>
+          <a class="nav-link " aria-current="page" routerLink="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about">About</a>
+          <a class="nav-link" routerLink="about">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="education">Education</a>
+            <a class="nav-link" routerLink="education">Education</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="skills">Skills</a>
+            <a class="nav-link" routerLink="skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="project
+          <a class="nav-link" routerLink="project
           ">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume">Resume</a>
+          <a class="nav-link" routerLink="resume">Resume</a>
         </li>
        
         <li class="nav-item">
-            <a class="nav-link" href="contact">Contact</a>
+            <a class="nav-link" routerLink="contact">Contact</a>
           </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
